infrastructure/kubernetes/overlays/development/patches/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kgv-dev
  labels:
    name: kgv-dev
    environment: development
